--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Exercice Html-Flexbox</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
 
-<header id="accueil"></header>
+<header id="accueil">
 
         <div id="container1">
             <img src="image/logo.png" alt="logo" width="100px"/>
@@ -29,6 +29,8 @@
                 <a href="#mentions">Mentions légales</a>
             </nav>
         </div>
+
+        </header>
 
 
 
