--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 
         <div id="container2">
             <nav>
-                <a href="#accueil">Accueil</a>
-                <a href="#articles">Articles</a>
-                <a href="#mentions">Mentions légales</a>
+                <ul>
+               <li><a href="#accueil">Accueil</a></li>
+               <li><a href="#articles">Articles</a></li>
+                <li><a href="#mentions">Mentions légales</a></li>
+                </ul>
             </nav>
         </div>
 
