--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header id="accueil">
 
-        <div id="container1">
+        <div id="header">
             <img src="image/logo.png" alt="logo" width="100px"/>
             <h1>Titre</h1>  
         </div>
@@ -22,7 +22,7 @@
 
 
 
-        <div id="container2">
+        <div id="nav">
             <nav>
                 <ul>
                <li><a href="#accueil">Accueil</a></li>
@@ -38,7 +38,7 @@
 
 
 
-        <main id="container3">
+        <main>
             <div id="articles">
                 <article class="art">
                     <p>Lorem  Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
@@ -57,7 +57,7 @@
 
 
 
-        <footer id="container4">
+        <footer>
             <p id="mentions">Copyright &copy;</p>
         </footer> 
         
